mType/tests/testFiles/import/pass/modules/DotSlashModule.mt
class DotSlashClass {
    public function greet(): string {
        return "Hello from DotSlash";
    }
}
