mType/tests/testFiles/import/error/modules/DuplicateModule.mt
class DuplicateClass {
    fun test(): String {
        return "Duplicate";
    }
}
